Extracted both environment forms in a single directive

--- a/public/views/environments.html
+++ b/public/views/environments.html
@@ -13,16 +13,8 @@
     <div class="col-md-12" ng-show="environments.length == 0"><span class="text-primary">Start by adding an environment!</span></div>
 
     <div class="col-md-12" ng-show="selectedEnvironment">
-        <h2>Edit the selected environment</h2>
-        <form class="form-inline" role="form">
-            <div class="form-group">
-                <input ng-model="selectedEnvironment.name" class="form-control" placeholder="Enter name" maxlength="50" size="30"/>
-            </div>
-            <div class="form-group">
-                <input ng-model="selectedEnvironment.description" class="form-control" placeholder="Enter description" maxlength="200" size="100"/>
-            </div>
-            <button ng-click="updateEnvironment(selectedEnvironment)" type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></button>
-        </form>
+        <environment-form callback="updateEnvironment(selectedEnvironment)" environment="selectedEnvironment"
+                          submit-icon="glyphicon-pencil" title="Edit the selected environment" />
     </div>
 
     <div class="col-md-12"></div>
@@ -31,16 +23,8 @@
     </div>
 
     <div class="col-md-12">
-        <h2>Add a new environment</h2>
-        <form class="form-inline" role="form">
-            <div class="form-group">
-                <input ng-model="newEnvironment.name" class="form-control" placeholder="Enter name" maxlength="50" size="30"/>
-            </div>
-            <div class="form-group">
-                <input ng-model="newEnvironment.description" class="form-control" placeholder="Enter description" maxlength="200" size="100"/>
-            </div>
-            <button ng-click="addEnvironment(newEnvironment)" type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button>
-        </form>
+        <environment-form callback="addEnvironment(newEnvironment)" environment="newEnvironment"
+                          submit-icon="glyphicon-plus" title="Add a new environment" />
     </div>
 
 </div>
