--- a/public/views/partials/environment-form.html
+++ b/public/views/partials/environment-form.html
@@ -1,10 +1,10 @@
 <h2>{{title}}</h2>
-<form class="form-inline" role="form">
-    <div class="form-group">
-        <input ng-model="environment.name" class="form-control" placeholder="Enter name" maxlength="50" size="30"/>
+<form class="form-inline" role="form" name="envForm" novalidate>
+    <div class="form-group" ng-class="{'has-error': envForm.name.$error.required && envForm.name.$dirty}">
+        <input type="text" name="name" ng-model="environment.name" class="form-control" placeholder="Enter name" maxlength="50" size="30" required/>
     </div>
     <div class="form-group">
-        <input ng-model="environment.description" class="form-control" placeholder="Enter description" maxlength="200" size="100"/>
+        <input type="text" ng-model="environment.description" class="form-control" placeholder="Enter description" maxlength="200" size="100"/>
     </div>
-    <button ng-click="callback()" type="button" class="btn btn-default"><span class="glyphicon {{submitIcon}}"></span></button>
+    <button ng-click="callback()" ng-disabled="envForm.$invalid" type="button" class="btn btn-default"><span class="glyphicon {{submitIcon}}"></span></button>
 </form>
