--- a/public/views/partials/environment-form.html
+++ b/public/views/partials/environment-form.html
@@ -6,5 +6,5 @@
     <div class="form-group">
         <input type="text" ng-model="environment.description" class="form-control" placeholder="Enter description" maxlength="200" size="100"/>
     </div>
-    <button ng-click="callback()" ng-disabled="envForm.$invalid" type="button" class="btn btn-default"><span class="glyphicon {{submitIcon}}"></span></button>
+    <button ng-click="callback(); envForm.$setPristine()" ng-disabled="envForm.$invalid" type="button" class="btn btn-default"><span class="glyphicon {{submitIcon}}"></span></button>
 </form>
