--- a/public/views/active_tickets.html
+++ b/public/views/active_tickets.html
@@ -1,3 +1,19 @@
-<div ng-repeat="ticket in tickets">
-    <a href="#/ticket/{{ticket._id}}" ng-click="loadTicket(ticket._id)">{{ticket.title}}</a>
+<div class="col-md-2">
+
+    <a ng-repeat="filter in filters" href="#/" ng-click="filter.loadFunction()" class="thumbnail">
+        {{filter.label}}
+    </a>
+</div>
+
+<div class="col-md-10">
+    <table class="table table-striped table-bordered">
+        <tr>
+            <th>Name</th>
+            <th>Environment</th>
+        </tr>
+        <tr ng-repeat="ticket in tickets">
+            <td><a href="#/ticket/{{ticket._id}}" ng-click="loadTicket(ticket._id)">{{ticket.title}}</a></td>
+            <td>{{ticket.environment}}</td>
+        </tr>
+    </table>
 </div>
