--- a/public/views/active_tickets.html
+++ b/public/views/active_tickets.html
@@ -12,7 +12,7 @@
             <th>Environment</th>
         </tr>
         <tr ng-repeat="ticket in tickets">
-            <td><a href="#/ticket/{{ticket._id}}" ng-click="loadTicket(ticket._id)">{{ticket.title}}</a></td>
+            <td><a href="#/tickets/{{ticket._id}}">{{ticket.title}}</a></td>
             <td>{{ticket.environment}}</td>
         </tr>
     </table>
