--- a/public/views/ticket.html
+++ b/public/views/ticket.html
@@ -1,1 +1,18 @@
-{{ticket}}
+<div class="col-md-4">
+    <form novalidate role="form" name="ticketForm">
+        <div class="form-group" ng-class="{'has-error': ticketForm.title.$error.required && ticketForm.title.$dirty}">
+            <input type="text" id="create_ticket_id" name="title" class="form-control" ng-model="ticket.title" placeholder="Enter title" size="50"/>
+        </div>
+        <div class="form-group">
+            <textarea id="create_ticket_description" class="form-control" ng-model="ticket.description" placeholder="Enter description" rows="10" cols="50"></textarea>
+        </div>
+        <div class="form-group">
+            <input type="text" id="create_ticket_env" class="form-control" ng-model="ticket.environment" placeholder="Enter environment" size="50"/>
+        </div>
+        <button ng-click="saveTicket(); ticketForm.$setPristine()" ng-disabled="ticketForm.$invalid" type="button" class="btn btn-default">Save</button>
+    </form>
+</div>
+
+
+
+
