--- a/public/views/edit_ticket.html
+++ b/public/views/edit_ticket.html
@@ -1,4 +1,32 @@
-<div class="col-md-4">
-    <ticket-form callback="save()" ticket="ticket"
-        submit-icon="glyphicon-pencil" title="Edit this ticket" />
+<div class="container-fluid">
+    <div class="col-md-7 well">
+        <ticket-form callback="save()" ticket="ticket"
+                     submit-icon="glyphicon-pencil" title="Edit this ticket" />
+    </div>
+
+    <div class="col-md-4 col-md-offset-1 well">
+        <h2>Add an event</h2>
+        <form role="form" name="eventForm" novalidate>
+            <div class="form-group">
+                <textarea name="event_text" name="text" class="form-control" ng-model="event.text" ng-class="{'has-error': eventForm.text.$error.required && eventForm.text.$dirty}"
+                          placeholder="What is going on ?" rows="13" cols="50" required></textarea>
+            </div>
+            <button ng-click="addEvent(); eventForm.$setPristine()" ng-disabled="envForm.$invalid" type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus"></span></button>
+        </form>
+    </div>
+
+    <div class="col-md-12"></div>
+    <div class="col-md-10 col-md-offset-1">
+        <hr/>
+    </div>
+
+    <div class="col-md-12">
+        <div ng-repeat="event in events">
+            <p>On {{event.date}},</p>
+            <blockquote>
+                <p>{{event.text}}</p>
+            </blockquote>
+        </div>
+        <div ng-show="events.length == 0"><span class="text-primary">There are no events for this ticket!</span></div>
+    </div>
 </div>
