--- a/public/views/partials/ticket_form.html
+++ b/public/views/partials/ticket_form.html
@@ -1,10 +1,10 @@
 <h2>{{title}}</h2>
 <form novalidate role="form" name="ticketForm">
     <div class="form-group" ng-class="{'has-error': ticketForm.title.$error.required && ticketForm.title.$dirty}">
-        <input type="text" id="create_ticket_id" name="title" class="form-control" ng-model="ticket.title" placeholder="Enter title" size="50" required/>
+        <input type="text" id="create_ticket_id" name="title" class="form-control" ng-model="ticket.title" placeholder="Enter title" maxlength="150" required/>
     </div>
     <div class="form-group">
-        <textarea id="create_ticket_description" class="form-control" ng-model="ticket.description" placeholder="Enter description" rows="8" cols="50"></textarea>
+        <textarea id="create_ticket_description" class="form-control" ng-model="ticket.description" placeholder="Enter description" maxlength="2000" rows="8" cols="50"></textarea>
     </div>
     <div class="form-group">
         <input type="text" id="create_ticket_env" class="form-control" ng-model="ticket.environment" placeholder="Enter environment" size="50"/>
