--- a/public/views/active_tickets.html
+++ b/public/views/active_tickets.html
@@ -6,14 +6,13 @@
 </div>
 
 <div class="col-md-10">
-    <table class="table table-striped table-bordered">
+    <table class="table table-striped table-bordered" ng-show="tickets.length > 0">
         <tr>
             <th>Name</th>
-            <th>Environment</th>
         </tr>
         <tr ng-repeat="ticket in tickets">
             <td><a href="#/tickets/{{ticket._id}}">{{ticket.title}}</a></td>
-            <td>{{ticket.environment}}</td>
         </tr>
     </table>
+    <p ng-show="tickets.length == 0">There are no tickets to manage. Good for you! Now go work on some features.</p>
 </div>
