--- a/public/views/edit_ticket.html
+++ b/public/views/edit_ticket.html
@@ -21,12 +21,12 @@
     </div>
 
     <div class="col-md-12">
-        <div ng-repeat="event in events">
+        <div ng-repeat="event in (ticket.events | orderBy: 'date':true)">
             <p>On {{ event.date | date: 'yyyy-MM-dd HH:mm:ss Z'}},</p>
             <blockquote>
                 <p>{{event.text}}</p>
             </blockquote>
         </div>
-        <div ng-show="events.length == 0"><span class="text-primary">There are no events for this ticket!</span></div>
+        <div ng-show="ticket.events.length == 0"><span class="text-primary">There are no events for this ticket!</span></div>
     </div>
 </div>
