--- a/public/css/springbok.css
+++ b/public/css/springbok.css
@@ -1,19 +1,24 @@
+/* Global: Making sure the floating header and footer don't overlap the main content */
 body {
     padding-top: 70px;
     padding-bottom: 70px;
 }
 
-html, body, main, .content, .row  {height: 100%}
+/* Global: Rounder corners imitating the bootstrap tile class */
+.rounded-corners {
+    border-radius: 4px;
+}
 
+/* Create ticket page style  */
 .alt { height: 100% }
     .alt.row { margin: 0; }
 .column { height: 100%; border-right: solid 1px black; padding-left: 15px; }
     .column li { width: 100%; height: 75px; border: solid 1px black; margin-bottom:10px; padding: 25px 0px; cursor: pointer; }
     .column li p { font-size: 1.5em; width: 100%; text-align: center; }
 
-    .column .environment {background-color: #BE90D4; }
+    .column .environment {background-color: #BE90D4;}
     .column .environment.selected {background-color: #9B59B6; color: white;}
-    .column .problem {background-color: #90C695; }
+    .column .problem {background-color: #90C695;}
     .column .problem.selected {background-color: #019875; color: white;}
-    .column .brand {background-color: #EB9532; }
+    .column .brand {background-color: #EB9532;}
     .column .brand.selected {background-color: #D35400; color: white;}
