--- a/public/css/springbok.css
+++ b/public/css/springbok.css
@@ -4,16 +4,21 @@ body {
     padding-bottom: 70px;
 }
 
+/* Environment model colors */
+.environment-color {
+    background-color: #718DA5;
+}
+
 /* Create ticket page style  */
 .alt { height: 100% }
     .alt.row { margin: 0; }
 .column { height: 100%; border-right: solid 1px black; padding-left: 15px; }
-    .column li { width: 100%; height: 75px; border: solid 1px black; margin-bottom:10px; padding: 25px 0px; cursor: pointer; }
-    .column li p { font-size: 1.5em; width: 100%; text-align: center; }
+    .column li { width: 100%; height: 60px; border: solid 1px black; margin-bottom:10px; padding: 15px 0px; cursor: pointer; }
+    .column li p { font-size: 1.2em; width: 100%; text-align: center; vertical-align: central; }
 
-    .column .environment {background-color: #BE90D4;}
-    .column .environment.selected {background-color: #9B59B6; color: white;}
-    .column .problem {background-color: #90C695;}
-    .column .problem.selected {background-color: #019875; color: white;}
-    .column .brand {background-color: #EB9532;}
-    .column .brand.selected {background-color: #D35400; color: white;}
+    .column .environment {background-color: #718DA5;}
+    .column .environment.selected {background-color: #496C89; color: white;}
+    .column .problem {background-color: #80AC88;}
+    .column .problem.selected {background-color: #578C60; color: white;}
+    .column .brand {background-color: #FF841E;}
+    .column .brand.selected {background-color: #E16600; color: white;}
