--- a/public/views/partials/ticket_form.html
+++ b/public/views/partials/ticket_form.html
@@ -8,17 +8,17 @@
     </div>
     <div class="form-group">
         <div class="btn-group">
-            <label class="btn btn-default" ng-repeat="env in environments">
-                <input type="radio" ng-model="ticket.environment" value="{{env._id}}" required />
-                {{env.name}}
+            <label class="btn btn-default" ng-repeat="status in statuses">
+                <input type="radio" ng-model="ticket.status" value="{{status.id}}" required />
+                {{status.label}}
             </label>
         </div>
     </div>
     <div class="form-group">
         <div class="btn-group">
-            <label class="btn btn-default" ng-repeat="status in statuses">
-                <input type="radio" ng-model="ticket.status" value="{{status.id}}" required />
-                {{status.label}}
+            <label class="btn btn-default environment-color" ng-repeat="env in environments">
+                <input type="radio" ng-model="ticket.environment" value="{{env._id}}" required />
+                {{env.name}}
             </label>
         </div>
     </div>
