Added full support for setting a problem category for a ticket

--- a/public/css/springbok.css
+++ b/public/css/springbok.css
@@ -9,6 +9,10 @@ body {
     background-color: #718DA5;
 }
 
+.problem-color {
+    background-color: #80AC88;
+}
+
 /* Create ticket page style  */
 .alt { height: 100% }
     .alt.row { margin: 0; }
