--- a/public/views/create_ticket.html
+++ b/public/views/create_ticket.html
@@ -115,8 +115,8 @@
                 <div class="form-group">
                     <button class="btn btn-default" ng-click="createTicket(); ticketForm.$setPristine()" ng-disabled="ticketForm.$invalid">Create ticket</button>
                 </div>
-                <div class="form-group">
-                    <p class="text-danger">{{errorMsg}}</p>
+                <div class="alert alert-danger" ng-show="error">
+                    <p ng-repeat="message in error.data.errors">{{message.msg}}</p>
                 </div>
             </form>
         </div>
