--- a/public/views/partials/ticket_form.html
+++ b/public/views/partials/ticket_form.html
@@ -30,5 +30,13 @@
             </label>
         </div>
     </div>
+    <div class="form-group">
+        <div class="btn-group">
+            <label class="btn btn-default brand-color" ng-repeat="brand in brands">
+                <input type="radio" ng-model="ticket.brand" value="{{brand._id}}"/>
+                {{brand.name}}
+            </label>
+        </div>
+    </div>
     <button ng-click="callback(); ticketForm.$setPristine()" ng-disabled="ticketForm.$invalid" type="button" class="btn btn-default"><span class="glyphicon {{submitIcon}}"></span></button>
 </form>
