Full support for ticket priority

--- a/public/views/partials/ticket_form.html
+++ b/public/views/partials/ticket_form.html
@@ -16,6 +16,14 @@
     </div>
     <div class="form-group">
         <div class="btn-group">
+            <label class="btn btn-default" ng-repeat="priority in priorities">
+                <input type="radio" ng-model="ticket.priority" value="{{priority.id}}" required />
+                <span class="bg-{{priority.severity}}">{{priority.shortLabel}}</span>
+            </label>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="btn-group">
             <label class="btn btn-default environment-color" ng-repeat="env in environments">
                 <input type="radio" ng-model="ticket.environment" value="{{env._id}}" required />
                 {{env.name}}
