--- a/public/views/create_ticket.html
+++ b/public/views/create_ticket.html
@@ -87,28 +87,10 @@
                 </div>
                 <div class="form-group">
                     <label>How serious is this ?</label>
-                    <div class="radio">
+                    <div class="radio" ng-repeat="priority in priorities">
                         <label>
-                            <input type="radio" name="severity" data-ng-model="ticket.severity" value="2" checked>
-                            <p class="bg-danger">Stop whatever you are doing and get to it! TOP PRIORITY.</p>
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="severity" data-ng-model="ticket.severity" value="1">
-                            <p class="bg-warning">It's okay, keep breathing. Within the week is fine. MEDIUM PRIORITY</p>
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="severity" data-ng-model="ticket.severity" value="0">
-                            <p class="bg-info">Seriously ? How can this be a problem ? LOW PRIORITY</p>
-                        </label>
-                    </div>
-                    <div class="radio">
-                        <label>
-                            <input type="radio" name="severity" data-ng-model="ticket.severity" value="-1">
-                            <p class="">Not quite sure yet... NO PRIORITY</p>
+                            <input type="radio" name="severity" ng-model="ticket.priority" value="{{priority.id}}" checked>
+                            <p class="bg-{{priority.severity}}">{{priority.longLabel}}</p>
                         </label>
                     </div>
                 </div>
