--- a/public/views/create_ticket.html
+++ b/public/views/create_ticket.html
@@ -79,7 +79,16 @@
             <form role="form" name="ticketForm" novalidate>
                 <div class="form-group" ng-class="{'has-error': ticketForm.name.$error.required && ticketForm.name.$dirty}">
                     <label for="ticketName">What are we talking about ?</label>
-                    <input id="ticketName" type="text" class="form-control" name="name" ng-model="ticket.name" required/>
+                    <div class="row">
+                        <div class="col-xs-1">
+                            <button class="btn btn-default" ng-click="buildTicketName();">
+                                <span class="glyphicon glyphicon glyphicon-refresh"></span>
+                            </button>
+                        </div>
+                        <div class="col-xs-11">
+                            <input id="ticketName" type="text" class="form-control" name="name" ng-model="ticket.name" required/>
+                        </div>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="ticketDescription">Elaborate a bit please</label>
@@ -89,13 +98,15 @@
                     <label>How serious is this ?</label>
                     <div class="radio" ng-repeat="priority in priorities">
                         <label>
-                            <input type="radio" name="severity" ng-model="ticket.priority" value="{{priority.id}}" checked>
+                            <input type="radio" name="severity" ng-model="ticket.priority" value="{{priority.id}}" required>
                             <p class="bg-{{priority.severity}}">{{priority.longLabel}}</p>
                         </label>
                     </div>
                 </div>
                 <div class="form-group">
-                    <button class="btn btn-default" ng-click="createTicket(); ticketForm.$setPristine()" ng-disabled="ticketForm.$invalid">Create ticket</button>
+                    <button class="btn btn-default" ng-click="createTicket(); ticketForm.$setPristine()" ng-disabled="ticketForm.$invalid">
+                        <span class="glyphicon glyphicon-plus"></span>
+                    </button>
                 </div>
                 <div class="alert alert-danger" ng-show="error">
                     <p ng-repeat="message in error.data.errors">{{message.msg}}</p>
