Ticket ID's are now based on an incrementing number sequence + ticket search feature

--- a/public/css/springbok.css
+++ b/public/css/springbok.css
@@ -4,6 +4,11 @@ body {
     padding-bottom: 70px;
 }
 
+/* Search bar */
+ul.dropdown-menu {
+    width: 97%;
+}
+
 /* Environment model colors */
 .environment-color {
     background-color: #718DA5;
