--- a/public/views/all_tickets.html
+++ b/public/views/all_tickets.html
@@ -9,9 +9,11 @@
 <div class="col-md-10">
     <table class="table table-striped table-bordered" ng-show="tickets.length > 0">
         <tr>
+            <th>Last Updated On</th>
             <th>Name</th>
         </tr>
         <tr ng-repeat="ticket in tickets">
+            <td class="col-md-2">{{ticket.lastUpdatedOn | date: 'yyyy-MM-dd HH:mm:ss Z'}}</td>
             <td><a href="#/tickets/{{ticket._id}}">{{ticket.title}}</a></td>
         </tr>
     </table>
